--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chance": "^1.1.8",
     "date-fns": "^2.25.0",
     "faker": "^5.5.3",
     "firebase": "^9.2.0",
